--- a/Tüik Takvim.ipynb
+++ b/Tüik Takvim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,6 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
     "## Required Code due to errors occured\n",
     "from selenium.common.exceptions import UnexpectedAlertPresentException\n",
     "\n",
@@ -54,12 +52,12 @@
     "\n",
     "isimler = [element.get_property(\"innerHTML\") for element in elements]\n",
     "\n",
-    "browser.quit()\n"
+    "browser.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +68,7 @@
        " 'Faaliyetleri Devam Etmekte Olan Aracı Kuruluşlar/Faaliyetleri Geçici Olarak Durdurulan Aracı Kuruluşlar/Aracı Kuruluşların Mevcut Yetki Belgelerine İlişkin Bilgiler/Aracı Kuruluşların Merkez Dışı Örgütleri']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
