--- a/deneme.ipynb
+++ b/deneme.ipynb
@@ -119,6 +119,162 @@
     "df.to_excel(excel_path, index=False)\n",
     "print(f\"Excel dosyası kaydedildi: {excel_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024 yılı için veriler çekiliyor...\n",
+      "2024 yılı için 3064 eleman bulundu.\n",
+      "2023 yılı için veriler çekiliyor...\n",
+      "2023 yılı için 3858 eleman bulundu.\n",
+      "2022 yılı için veriler çekiliyor...\n",
+      "2022 yılı için 3838 eleman bulundu.\n",
+      "2021 yılı için veriler çekiliyor...\n",
+      "2021 yılı için 3489 eleman bulundu.\n",
+      "2020 yılı için veriler çekiliyor...\n",
+      "2020 yılı için 3510 eleman bulundu.\n",
+      "Excel dosyası kaydedildi: C:\\Users\\oguzo\\Desktop\\Selenium\\Tüik Takvim\\TUIK-Takvim\\Yayımlanan ve Yaklaşan Veriler Takvimi.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code For All Data Timeline\n",
+    "\n",
+    "# Required Libraries\n",
+    "import os\n",
+    "import warnings\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.firefox.options import Options\n",
+    "from selenium.webdriver.firefox.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.common.exceptions import StaleElementReferenceException, TimeoutException\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# !!!!Download Location!!!!\n",
+    "download_dir = r\"C:\\Users\\oguzo\\Desktop\\Selenium\\Tüik Takvim\\TUIK-Takvim\"\n",
+    "\n",
+    "# Firefox Settings\n",
+    "options = Options()\n",
+    "options.binary_location = r\"C:\\Program Files\\Mozilla Firefox\\firefox.exe\"\n",
+    "options.set_preference(\"browser.download.folderList\", 2)\n",
+    "options.set_preference(\"browser.download.manager.showWhenStarting\", False)\n",
+    "options.set_preference(\"browser.download.dir\", download_dir)\n",
+    "options.set_preference(\"browser.helperApps.neverAsk.saveToDisk\", \"application/vnd.ms-excel\")\n",
+    "# Geckodriver Settings\n",
+    "service = Service(executable_path=r\"C:\\Users\\oguzo\\Desktop\\Selenium\\geckodriver.exe\")\n",
+    "# WebDriver Opening\n",
+    "browser = webdriver.Firefox(service=service, options=options)\n",
+    "browser.get('https://www.tuik.gov.tr/Kurumsal/Veri_Takvimi')\n",
+    "\n",
+    "# Scraping function for both published and upcoming data\n",
+    "def scrape_page_data():\n",
+    "    time.sleep(2)\n",
+    "    elements = browser.find_elements(By.CLASS_NAME, \"timeline-item\")\n",
+    "    page_data = []\n",
+    "    for element in elements:\n",
+    "        try:\n",
+    "            card_title = element.find_element(By.CLASS_NAME, \"card-title\").text\n",
+    "            card_body = element.find_element(By.CLASS_NAME, \"box-item\").text\n",
+    "            card_period = element.find_element(By.CLASS_NAME, \"dt\").text\n",
+    "            link = element.find_element(By.TAG_NAME, \"a\").get_attribute(\"href\")\n",
+    "            page_data.append({\n",
+    "                'Kurum': card_title,\n",
+    "                'Açıklama': card_body,\n",
+    "                'Dönem ve Tarih': card_period,\n",
+    "                'Link': link\n",
+    "            })\n",
+    "        except StaleElementReferenceException:\n",
+    "            print(\"StaleElementReferenceException hatası\")\n",
+    "    return page_data\n",
+    "\n",
+    "def scrape_upcoming_data():\n",
+    "    first_click = WebDriverWait(browser, 30).until(\n",
+    "        EC.element_to_be_clickable((By.XPATH, \"/html/body/div/div/div[1]/div[2]/div[2]/div[3]/button\"))\n",
+    "    )\n",
+    "    browser.execute_script(\"arguments[0].click();\", first_click)\n",
+    "    second_click = WebDriverWait(browser, 30).until(\n",
+    "        EC.element_to_be_clickable((By.XPATH, \"/html/body/div/div/div[1]/div[2]/div[2]/div[3]/ul/li[2]/a\"))\n",
+    "    )\n",
+    "    browser.execute_script(\"arguments[0].click();\", second_click)\n",
+    "    # Scrape upcoming data\n",
+    "    upcoming_data = scrape_page_data()\n",
+    "    return upcoming_data\n",
+    "\n",
+    "\n",
+    "# Scraping upcoming data\n",
+    "upcoming_data = scrape_upcoming_data()\n",
+    "\n",
+    "first_click = WebDriverWait(browser, 30).until(\n",
+    "    EC.element_to_be_clickable((By.XPATH, \"/html/body/div/div/div[1]/div[2]/div[2]/div[3]/button\"))\n",
+    ")\n",
+    "browser.execute_script(\"arguments[0].click();\", first_click)\n",
+    "\n",
+    "second_click = WebDriverWait(browser, 30).until(\n",
+    "    EC.element_to_be_clickable((By.XPATH, \"/html/body/div/div/div[1]/div[2]/div[2]/div[3]/ul/li[1]/a\"))\n",
+    ")\n",
+    "browser.execute_script(\"arguments[0].click();\", second_click)\n",
+    "\n",
+    "\n",
+    "# Data collection for all years (Published Data)\n",
+    "published_data = []\n",
+    "for year in reversed(range(2020, 2025)):\n",
+    "    # Clicking the year button panel\n",
+    "    first_click_for_year_selection = WebDriverWait(browser, 30).until(\n",
+    "        EC.element_to_be_clickable((By.XPATH, \"/html/body/div/div/div[1]/div[2]/div[2]/div[2]/button\"))\n",
+    "    )\n",
+    "    browser.execute_script(\"arguments[0].click();\", first_click_for_year_selection)\n",
+    "    year_button_xpath = f\"/html/body/div/div/div[1]/div[2]/div[2]/div[2]/ul/li[{year-2019}]/a\"\n",
+    "    try:\n",
+    "        year_button = WebDriverWait(browser, 30).until(\n",
+    "            EC.element_to_be_clickable((By.XPATH, year_button_xpath))\n",
+    "        )\n",
+    "        print(f\"{year} yılı için veriler çekiliyor...\")\n",
+    "        browser.execute_script(\"arguments[0].click();\", year_button)\n",
+    "\n",
+    "        WebDriverWait(browser, 30).until(\n",
+    "            EC.presence_of_all_elements_located((By.CLASS_NAME, \"timeline-item\"))\n",
+    "        )\n",
+    "        \n",
+    "        time.sleep(3)\n",
+    "        \n",
+    "        year_data = scrape_page_data()\n",
+    "        print(f\"{year} yılı için {len(year_data)} eleman bulundu.\")\n",
+    "        published_data += year_data\n",
+    "        \n",
+    "    except TimeoutException:\n",
+    "        print(f\"{year} yılı için TimeoutException hatası\")\n",
+    "\n",
+    "\n",
+    "# Close the browser after scraping is complete\n",
+    "browser.quit()\n",
+    "\n",
+    "\n",
+    "# Combine the published and upcoming data\n",
+    "upcoming_data = upcoming_data[::-1]  \n",
+    "all_data = upcoming_data + published_data\n",
+    "\n",
+    "# Create a DataFrame for the combined data\n",
+    "df = pd.DataFrame(all_data)\n",
+    "\n",
+    "# Split 'Dönem ve Tarih' column into 'Dönem' and 'Tarih', then drop the original 'Dönem ve Tarih' column\n",
+    "df[['Dönem', 'Tarih']] = df['Dönem ve Tarih'].str.extract(r'Dönem:(.*)\\nTarih:(.*)')\n",
+    "df.drop(columns=['Dönem ve Tarih'], inplace=True)\n",
+    "\n",
+    "# Save the data as an Excel file\n",
+    "excel_path = os.path.join(download_dir, 'Yayımlanan ve Yaklaşan Veriler Takvimi.xlsx')\n",
+    "df.to_excel(excel_path, index=False)\n",
+    "print(f\"Excel dosyası kaydedildi: {excel_path}\")\n"
+   ]
   }
  ],
  "metadata": {
